--- a/package.json
+++ b/package.json
@@ -40,11 +40,19 @@
     "typos": "chmod +x scripts/check_typos.sh && ./scripts/check_typos.sh"
   },
   "dependencies": {
+    "@fastify/static": "^7.0.4",
+    "@nestjs/axios": "^3.0.3",
     "@nestjs/cli": "^10.4.5",
     "@nestjs/common": "^10.4.3",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.1",
     "@nestjs/platform-fastify": "^10.4.3",
+    "@nestjs/swagger": "^7.4.2",
+    "@types/express": "^4.17.21",
+    "axios": "^1.7.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "express": "^4.21.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
