--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test:performance": "k6 run tests/performance/contexts/users/get-users.mjs",
     "calculate-global-test-coverage": "tsx scripts/calculate-global-test-coverage.ts",
     "prepare": "husky",
-    "lint": "eslint --ignore-path .gitignore . --ext .js,.mjs,cjs,.ts,.mts",
+    "lint": "eslint --ignore-path .gitignore --ignore-path dist . --ext .js,.mjs,cjs,.ts,.mts",
     "lint:fix": "npm run lint -- --fix",
     "lint:yaml": "chmod +x scripts/lint_yaml.sh && ./scripts/lint_yaml.sh",
     "build:clean": "rimraf dist; exit 0",
