--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "template"
   ],
   "engines": {
-    "node": ">=18.x",
-    "npm": ">=9.x"
+    "node": "20.9.0",
+    "npm": "10.1.0"
   },
   "main": "dist/main.js",
   "scripts": {
